<resources>
    <string name="app_name">CustomerManagement</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile">Mobile</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="show_all">Show all</string>
    <string name="update">Update</string>
</resources>